Added unit tests for contact frequency count time range